--- a/package.json
+++ b/package.json
@@ -1,16 +1,21 @@
 {
-  "name": "ibiza2.2",
+  "name": "ibiza",
   "version": "1.0.0",
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "start": "electron ."
+    "start": "electron .",
+    "package-win": "electron-packager . martinpegoraroIbiza --overwrite --asar=true --platform=win32 --arch=ia32 --icon=assets/icons/win/ibiza2.ico --prune=true --out=release-builds --version-string.CompanyName=CE --version-string.FileDescription=CE --version-string.ProductName=\"IBIZA\""
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "martinpegoraro-azorahai",
+  "license": "MIT ",
   "dependencies": {
     "electron": "^12.0.2",
     "mongoose": "^5.12.3"
+  },
+  "devDependencies": {
+    "electron-builder": "^22.10.5",
+    "electron-packager": "^15.2.0"
   }
 }
